--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
+<!DOCTYPE html>
 <!--A Design by Mathew Oscar Garalde
 Email: mathewgaralde@gmail.com
 -->
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -16,12 +16,14 @@ Email: mathewgaralde@gmail.com
 
       <div class="container">
         <div class="row">
+
           <div class="col-md-6 col-xs-3">
               <div class="top-left">
-                <img class="logo" src="img/logo.png" height="53">
+                <img class="logo" src="img/logo.png" height="53" alt="logo">
                 <h3>Your Honda Dealer</h3>
               </div>
           </div>
+
           <div class="col-md-6 col-xs-9">
               <div class="top-right">
                 <h3>Sales: 000-000-0000</h3>
@@ -33,6 +35,7 @@ Email: mathewgaralde@gmail.com
                 </div>
               </div>
             </div>
+
         </div>
       </div>
 
@@ -73,7 +76,7 @@ Email: mathewgaralde@gmail.com
               <button type="button" class="btn btn-blue">Search New Inventory</button>
             </div>
             <div class="col-md-6">
-              <img src="img/people.png">
+              <img src="img/people.png" alt="people">
             </div>
           </div>
       </section>
@@ -123,7 +126,7 @@ Email: mathewgaralde@gmail.com
 
                     <!-- CAR1 -->
                       <div class="car">
-                        <img src="img/car1.png" height="100">
+                        <img src="img/car1.png" height="100" alt="car1">
                         <p class="car-name">2015 Honda Accord Sedan CVT LX</p>
                         <p>Lease for $199/mo. for 36 months</p>
                         <a class="links" href="#">See details</a>
@@ -131,7 +134,7 @@ Email: mathewgaralde@gmail.com
 
                     <!-- CAR2 -->
                       <div class="car">
-                        <img src="img/car2.png" height="100">
+                        <img src="img/car2.png" height="100" alt="car2">
                         <p class="car-name">2015 Honda CR-V CVT 2WD LX</p>
                         <p>Lease for $239/mo. for 39 months</p>
                         <a class="links" href="#">See details</a>
@@ -139,7 +142,7 @@ Email: mathewgaralde@gmail.com
 
                     <!-- CAR3 -->
                       <div class="car">
-                        <img src="img/car3.png" height="100">
+                        <img src="img/car3.png" height="100" alt="car3">
                         <p class="car-name">2015 Honda Odyssey LX</p>
                         <p>Lease for $269/mo. for 36 months</p>
                         <a class="links" href="#">See details</a>
@@ -187,7 +190,7 @@ Email: mathewgaralde@gmail.com
           <a href="#">Privacy</a>
           <p>|</p>
           <a href="#">Contact Us</a>
-          <img class="bottom-logo" src="img/logo2.png">
+          <img class="bottom-logo" src="img/logo2.png" alt="logo2">
         </div>
       </footer>
 
