--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Email: mathewgaralde@gmail.com
 
           <div class="col-md-6 col-xs-3">
               <div class="top-left">
-                <img class="logo" src="img/logo.png" height="53" alt="logo">
+                <img class="logo" src="logo.jpg" height="53" alt="logo">
                 <h3>Your Honda Dealer</h3>
               </div>
           </div>
